# deskipc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/protocol/: frame_header.h  framing.cpp  framing.h
core/rpc/: rpc_client.cpp  rpc_client.h  rpc_server.cpp  rpc_server.h  rpc_types.h
core/transport/tcp/: net.h
doc/: protocol.md
examples/: CMakeLists.txt
examples/parent_cli/: main.cpp
examples/worker_cli/: main.cpp
tests/: CMakeLists.txt  deskipc_tests.cpp
